# context-governor

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo.py
integration/: README.md  governor.example.toml  hermes-config.tier0.yaml  measurement.md  run-governor.ps1  surface-b-protocol.md  surface-b-systemprompt.md
src/contextmanager/: __init__.py  budget.py  compactor.py  durable.py  hotness.py  launcher.py  note_store.py  retriever.py  sealing.py  state_store.py  tokenizer.py  types.py  wiring.py
src/contextmanager/mcp/: __init__.py  __main__.py  config.py  counter.py  server.py  service.py
src/contextmanager/proxy/: __init__.py  __main__.py  app.py  config.py  metrics.py  recall.py  rewriter.py  upstream.py
tasks/: phase1-spec.md  phase2-spec.md  phase3-spec.md  phase4-spec.md  phase5-spec.md  plan.md
tests/: conftest.py  test_budget.py  test_compactor.py  test_cross_surface.py  test_durable.py  test_fts5_retriever.py  test_hotness.py  test_launcher.py  test_note_store.py  test_retriever.py  test_sealing.py  test_state_store.py  test_tokenizer.py  test_wiring.py
tests/mcp_server/: conftest.py  test_config.py  test_counter.py  test_main.py  test_server.py  test_service.py
tests/proxy/: conftest.py  test_app_lifespan.py  test_app_metrics.py  test_app_nonstream.py  test_app_stream.py  test_recall.py  test_rewriter.py  test_upstream.py
wiki/: configuration.md  context-governor.md  durable-store.md  hermes-compaction.md  index.md  no-re-fire-invariant.md  surface-a-proxy.md  surface-b-mcp.md
